Code/syntax.output
Terminals unused in grammar

   ASSIGNLOP


State 20 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 101 conflicts: 10 shift/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error CompSt

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC

   26 StmtList: Stmt StmtList
   27         | %empty

   28 Stmt: Exp SEMI
   29     | CompSt
   30     | RETURN Exp SEMI
   31     | IF LP Exp RP Stmt
   32     | IF LP Exp RP Stmt ELSE Stmt
   33     | IF LP error RP Stmt
   34     | IF LP error RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error SEMI
   37     | error RC

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | error SEMI
   42    | error RC

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT

   65 Args: Exp COMMA Args
   66     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 33 34 36 37 41 42
INT (258) 19 63
FLOAT (259) 64
SEMI (260) 4 5 7 28 30 36 40 41
COMMA (261) 10 22 44 65
ASSIGNOP (262) 46 47
RELOP (263) 50
PLUS (264) 51
MINUS (265) 52 56
STAR (266) 53
DIV (267) 54
AND (268) 48
OR (269) 49
DOT (270) 61
NOT (271) 57
ID (272) 15 17 18 20 21 58 59 61 62
TYPE (273) 11
LP (274) 20 21 31 32 33 34 35 55 58 59
RP (275) 20 21 31 32 33 34 35 55 58 59
LB (276) 19 60
RB (277) 19 60
LC (278) 13 25
RC (279) 13 25 37 42
STRUCT (280) 13 14
RETURN (281) 30
IF (282) 31 32 33 34
ELSE (283) 32 34
WHILE (284) 35
LOWER_THAN_ELSE (285)
ASSIGNLOP (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (36)
    on left: 9 10, on right: 4 10
Specifier (37)
    on left: 11 12, on right: 4 5 6 7 8 24 40
StructSpecifier (38)
    on left: 13 14, on right: 12
OptTag (39)
    on left: 15 16, on right: 13
Tag (40)
    on left: 17, on right: 14
VarDec (41)
    on left: 18 19, on right: 9 10 19 24 45 46
FunDec (42)
    on left: 20 21, on right: 6 7
VarList (43)
    on left: 22 23, on right: 20 22
ParamDec (44)
    on left: 24, on right: 22 23
CompSt (45)
    on left: 25, on right: 6 8 29
StmtList (46)
    on left: 26 27, on right: 25 26
Stmt (47)
    on left: 28 29 30 31 32 33 34 35 36 37, on right: 26 31 32 33 34
    35
DefList (48)
    on left: 38 39, on right: 13 25 38
Def (49)
    on left: 40 41 42, on right: 38
DecList (50)
    on left: 43 44, on right: 40 44
Dec (51)
    on left: 45 46, on right: 43 44
Exp (52)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64,
    on right: 28 30 31 32 35 46 47 48 49 50 51 52 53 54 55 56 57 60
    61 65 66
Args (53)
    on left: 65 66, on right: 58 65


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error CompSt

    error  shift, and go to state 13
    SEMI   shift, and go to state 14
    ID     shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    8 ExtDef: Specifier error . CompSt

    LC  shift, and go to state 20

    CompSt  go to state 21


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 22

    $default  reduce using rule 18 (VarDec)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


State 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 26
    LC    shift, and go to state 20

    CompSt  go to state 27


State 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 39 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 30
    Def              go to state 31


State 20

   25 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 32
    Def              go to state 31


State 21

    8 ExtDef: Specifier error CompSt .

    $default  reduce using rule 8 (ExtDef)


State 22

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 2

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 35
    ParamDec         go to state 36


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 17


State 25

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 39


State 26

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   41 Def: error . SEMI
   42    | error . RC

    SEMI  shift, and go to state 40
    RC    shift, and go to state 41


State 29

   40 Def: Specifier . DecList SEMI

    ID  shift, and go to state 37

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 30

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 31

   38 DefList: Def . DefList

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 31


State 32

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    ID      shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 20
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 58
    Stmt      go to state 59
    Exp       go to state 60


State 33

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 34

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 61


State 35

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 62


State 36

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 63

    $default  reduce using rule 23 (VarList)


State 37

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 38

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 39

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 64


State 40

   41 Def: error SEMI .

    $default  reduce using rule 41 (Def)


State 41

   42 Def: error RC .

    $default  reduce using rule 42 (Def)


State 42

   19 VarDec: VarDec . LB INT RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 25

    $default  reduce using rule 45 (Dec)


State 43

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 66


State 44

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 43 (DecList)


State 45

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 46

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 47

   36 Stmt: error . SEMI
   37     | error . RC

    SEMI  shift, and go to state 68
    RC    shift, and go to state 69


State 48

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 49

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 50

   56 Exp: MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 70


State 51

   57 Exp: NOT . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 71


State 52

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 72

    $default  reduce using rule 62 (Exp)


State 53

   55 Exp: LP . Exp RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 73


State 54

   30 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 74


State 55

   31 Stmt: IF . LP Exp RP Stmt
   32     | IF . LP Exp RP Stmt ELSE Stmt
   33     | IF . LP error RP Stmt
   34     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 75


State 56

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 76


State 57

   29 Stmt: CompSt .

    $default  reduce using rule 29 (Stmt)


State 58

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 77


State 59

   26 StmtList: Stmt . StmtList

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    ID      shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 20
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 78
    Stmt      go to state 59
    Exp       go to state 60


State 60

   28 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89


State 61

   19 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 24 (ParamDec)


State 62

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 63

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 90
    ParamDec         go to state 36


State 64

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 65

   46 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 91


State 66

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 67

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 42
    DecList  go to state 92
    Dec      go to state 44


State 68

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


State 69

   37 Stmt: error RC .

    $default  reduce using rule 37 (Stmt)


State 70

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    DOT       shift, and go to state 88
    LB        shift, and go to state 89

    ASSIGNOP  [reduce using rule 56 (Exp)]
    $default  reduce using rule 56 (Exp)


State 71

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    DOT       shift, and go to state 88
    LB        shift, and go to state 89

    ASSIGNOP  [reduce using rule 57 (Exp)]
    $default  reduce using rule 57 (Exp)


State 72

   58 Exp: ID LP . Args RP
   59    | ID LP . RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 93

    Exp   go to state 94
    Args  go to state 95


State 73

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    RP        shift, and go to state 96
    LB        shift, and go to state 89


State 74

   30 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 97
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89


State 75

   31 Stmt: IF LP . Exp RP Stmt
   32     | IF LP . Exp RP Stmt ELSE Stmt
   33     | IF LP . error RP Stmt
   34     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 98
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 99


State 76

   35 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 100


State 77

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 78

   26 StmtList: Stmt StmtList .

    $default  reduce using rule 26 (StmtList)


State 79

   28 Stmt: Exp SEMI .

    $default  reduce using rule 28 (Stmt)


State 80

   47 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 101


State 81

   50 Exp: Exp RELOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 102


State 82

   51 Exp: Exp PLUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 103


State 83

   52 Exp: Exp MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 104


State 84

   53 Exp: Exp STAR . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 105


State 85

   54 Exp: Exp DIV . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 106


State 86

   48 Exp: Exp AND . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 107


State 87

   49 Exp: Exp OR . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 108


State 88

   61 Exp: Exp DOT . ID

    ID  shift, and go to state 109


State 89

   60 Exp: Exp LB . Exp RB

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    ID     shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 110


State 90

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 91
